# notebook_shim

./: CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  setup.cfg
.github/workflows/: check-release.yml  test.yml
notebook_shim/: _version.py  nbserver.py
notebook_shim/tests/: mockextension.py  test_extension.py
