[build-system]
requires = ["jupyter_packaging~=0.9,<2"]
build-backend = "jupyter_packaging.build_api"

[tool.check-manifest]
ignore = ["tbump.toml", ".*", "conftest.py"]

[tool.pytest.ini_options]
norecursedirs = ["confs"]
testpaths = [
    "notebook_shim/tests"
]

[tool.jupyter-releaser]
skip = ["check-links"]

[tool.tbump.version]
current = "0.1.0"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "notebook_shim/_version.py"
