[build-system]
requires = ["hatchling >=1.0"]
build-backend = "hatchling.build"

[project]
name = "notebook_shim"
dynamic = [
    "version",
]
readme = "README.md"
license = { file = "LICENSE" }
description = "A shim layer for notebook traits and config"
authors = [{name = "Jupyter Development Team", email = "jupyter@googlegroups.com"}]
keywords = ["ipython", "jupyter"]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7"
dependencies = [
  "jupyter_server>=1.8,<3"
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_server_config.d/notebook_shim.json" = "etc/jupyter/jupyter_server_config.d/notebook_shim.json"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-tornasync",
    "pytest-console-scripts",
    "pytest_jupyter"
]





[tool.hatch.version]
path = "notebook_shim/_version.py"

[tool.tbump.version]
current = "0.2.4"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "notebook_shim/_version.py"
version_template = '({major}, {minor}, {patch}, "{channel}", "{release}")'

[[tool.tbump.file]]
src = "notebook_shim/_version.py"
version_template = "{major}.{minor}.{patch}{channel}{release}"

[[tool.tbump.field]]
name = "channel"
default = ""

[[tool.tbump.field]]
name = "release"
default = ""

[tool.check-manifest]
ignore = ["tbump.toml", ".*", "conftest.py"]

[tool.pytest.ini_options]
norecursedirs = ["confs"]
testpaths = [
    "notebook_shim/tests"
]

[tool.jupyter-releaser]
skip = ["check-links"]
